# h743xih6Project

./: .config  .cproject  .gitignore  .gitmodules  .project  CMAKE.md  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  makefile.targets  rtconfig.h  rtconfig.py
applications/: app_lvgl.c  app_touch.c  main.c
applications/lv_wifi_weather/: Kconfig  README.md  SConscript  TESTING.md
applications/lv_wifi_weather/examples/: lvww_demo.c  lvww_rw007_demo.c
applications/lv_wifi_weather/inc/: lv_wifi_weather.h  lvww_assets.h  lvww_demo.h  lvww_mock.h  lvww_rw007.h  lvww_rw007_demo.h
applications/lv_wifi_weather/ports/mock/: lvww_mock.c
applications/lv_wifi_weather/ports/rw007/: lvww_rw007.c
applications/lv_wifi_weather/resources/: README.md
applications/lv_wifi_weather/resources/qspi/ui/: manifest.json
applications/lv_wifi_weather/resources/qspi/ui/data/: cities_zh.tsv
applications/lv_wifi_weather/resources/qspi/ui/fonts/: LICENSE-SourceHanSans.txt  lvww_simsun_16_4bpp.fnt  lvww_source_han_sans_sc_16_4bpp.fnt
applications/lv_wifi_weather/resources/qspi/ui/images/: README.txt
applications/lv_wifi_weather/resources/qspi/ui/text/: common_chars_utf8.txt
applications/lv_wifi_weather/src/: lv_wifi_weather.c  lvww_assets.c  lvww_font_cjk_16.c
applications/lv_wifi_weather/tools/: generate_all_resources.py  generate_font.py  generate_qspi_assets.py  source_han_sans.py
applications/lvgl_port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
cmake/: arm-none-eabi-gcc.cmake  components.cmake  project_includes.cmake
cmake/components/: applications.cmake  drivers.cmake  lvgl.cmake  packages.cmake  platform.cmake  rtthread.cmake
drivers/: board.c  board.h  drv_clk.c  drv_common.c  flash_h7.c  qspi_slave_w25q64.c
drivers/include/: drv_common.h
libraries/CMSIS/Device/ST/STM32H7xx/Source/Templates/: SConscript
libraries/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc/: SConscript  startup_stm32h743xx.S
linkscripts/STM32H743XIHx/: link.lds
rt-thread/components/fal/inc/: fal_cfg.h
